Mean absolute deviation and Coefficient of variance calculations added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,11 @@ project(ZS24_PPR_Zappe)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(ZS24_PPR_Zappe src/main.cpp src/merge_sort.h src/merge_sort.cpp src/merge_sort.h)
+add_executable(
+    ZS24_PPR_Zappe
+    src/main.cpp
+    src/merge_sort.h
+    src/merge_sort.cpp
+    src/statistics.h
+    src/statistics.cpp
+)
