Data loader added, but the calculations are all wrong

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,6 @@ add_executable(
     src/merge_sort.cpp
     src/statistics.h
     src/statistics.cpp
+    src/dataloader.h
+    src/dataloader.cpp
 )
