--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.24)
 project(ZS24_PPR_Zappe)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror -fopenmp -mavx2")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wpedantic -fopenmp -mavx2")
 
 add_executable(
     ZS24_PPR_Zappe
@@ -11,6 +11,6 @@ add_executable(
     src/dataloader.cpp
     src/merge_sort.h
     src/merge_sort.cpp
-    src/statistics.h
-    src/statistics.cpp
+    src/computations.h
+    src/computations.cpp
 )
