--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wpedantic -fopenm
 add_executable(
     ZS24_PPR_Zappe
     src/main.cpp
+    src/utils.h
     src/arg_parser.h
     src/arg_parser.cpp
     src/dataloader.h
