Plotting line charts based on SVGRenderer from https://github.com/SmartCGMS/common.git

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,4 +45,6 @@ add_executable(
     src/calculations/computations.h
     src/calculations/computations.cpp
     ${drawing}
+    src/my_drawing/svg_generator.h
+    src/my_drawing/svg_generator.cpp
 )
