--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "
     #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wpedantic -fopenmp -mavx2 -D_USE_FLOAT")
 endif()
 
+# Find OpenCL
+find_package(OpenCL REQUIRED)
+
 # Include directories
 include_directories(src)
 include_directories(lib)
@@ -40,11 +43,16 @@ add_executable(
     src/utils/arg_parser.cpp
     src/dataloader/dataloader.h
     src/dataloader/dataloader.cpp
-    src/calculations/merge_sort.h
-    src/calculations/merge_sort.cpp
-    src/calculations/computations.h
-    src/calculations/computations.cpp
+    src/calculations/cpu/merge_sort.h
+    src/calculations/cpu/merge_sort.cpp
+    src/calculations/cpu/computations.h
+    src/calculations/cpu/computations.cpp
+    src/calculations/gpu/gpu.h
+    src/calculations/gpu/gpu.cpp
     ${drawing}
     src/my_drawing/svg_generator.h
     src/my_drawing/svg_generator.cpp
 )
+
+# Link OpenCL
+target_link_libraries(ZS24_PPR_Zappe OpenCL::OpenCL)
